// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AssetRepository Should delete property image 1`] = `undefined`;

exports[`AssetRepository Should delete verification document 1`] = `undefined`;

exports[`AssetRepository Should fetch existing verification document types 1`] = `
Array [
  Object {
    "category": "IDENTITY",
    "description": "",
    "help_text": "Supports: JPG, JPEG, PNG, PDF",
    "icon": "id-proof",
    "id": 1,
    "label": "Upload ID proof",
    "name": "ID_PROOF",
    "title": "ID Proof",
  },
  Object {
    "category": "IDENTITY",
    "description": "Please ensure that the ID is clearly visible in your photo",
    "help_text": "Note: Feugiat sed morbi feuiat enim.",
    "icon": "selfie",
    "id": 2,
    "label": "Capture Your Selfie",
    "name": "SELFIE_ID_PROOF",
    "title": "Click a selfie with the ID proof",
  },
  Object {
    "category": "RENT",
    "description": "You can upload Electricity bill or Property tax reciepts which mentions your name and the property address",
    "help_text": "Supports: JPG, JPEG, PNG, PDF'",
    "icon": "document",
    "id": 3,
    "label": "Upload Document",
    "name": "OWNERSHIP_VERIFICATION_DOCUMENT",
    "title": "Upload Ownership Verification Document",
  },
  Object {
    "category": "SALE",
    "description": "You can upload Electricity bill or Property tax reciepts which mentions your name and the property address",
    "help_text": "Supports: JPG, JPEG, PNG, PDF'",
    "icon": "document",
    "id": 4,
    "label": "Upload Document",
    "name": "OCCUPANCY_CERTIFICATE",
    "title": "Upload Occupancy Document",
  },
  Object {
    "category": "SALE",
    "description": "You can upload Electricity bill or Property tax reciepts which mentions your name and the property address",
    "help_text": "Supports: JPG, JPEG, PNG, PDF'",
    "icon": "document",
    "id": 5,
    "label": "Upload Document",
    "name": "PROPERTY_TAX",
    "title": "Upload Property Tax",
  },
]
`;

exports[`AssetRepository Should fetch verification document types 1`] = `
Array [
  Object {
    "category": "IDENTITY",
    "description": "",
    "help_text": "Supports: JPG, JPEG, PNG, PDF",
    "icon": "id-proof",
    "id": 1,
    "label": "Upload ID proof",
    "name": "ID_PROOF",
    "title": "ID Proof",
  },
  Object {
    "category": "IDENTITY",
    "description": "Please ensure that the ID is clearly visible in your photo",
    "help_text": "Note: Feugiat sed morbi feuiat enim.",
    "icon": "selfie",
    "id": 2,
    "label": "Capture Your Selfie",
    "name": "SELFIE_ID_PROOF",
    "title": "Click a selfie with the ID proof",
  },
  Object {
    "category": "RENT",
    "description": "You can upload Electricity bill or Property tax reciepts which mentions your name and the property address",
    "help_text": "Supports: JPG, JPEG, PNG, PDF'",
    "icon": "document",
    "id": 3,
    "label": "Upload Document",
    "name": "OWNERSHIP_VERIFICATION_DOCUMENT",
    "title": "Upload Ownership Verification Document",
  },
  Object {
    "category": "SALE",
    "description": "You can upload Electricity bill or Property tax reciepts which mentions your name and the property address",
    "help_text": "Supports: JPG, JPEG, PNG, PDF'",
    "icon": "document",
    "id": 4,
    "label": "Upload Document",
    "name": "OCCUPANCY_CERTIFICATE",
    "title": "Upload Occupancy Document",
  },
  Object {
    "category": "SALE",
    "description": "You can upload Electricity bill or Property tax reciepts which mentions your name and the property address",
    "help_text": "Supports: JPG, JPEG, PNG, PDF'",
    "icon": "document",
    "id": 5,
    "label": "Upload Document",
    "name": "PROPERTY_TAX",
    "title": "Upload Property Tax",
  },
]
`;

exports[`AssetRepository Should get asset identity documents 1`] = `
Array [
  Object {
    "document": Object {
      "attachment_type": "attachment_type",
      "id": 1,
      "link": "link",
      "mime_type": "mime_type",
      "name": "name",
    },
    "id": 1,
    "verification_document_type": Object {
      "category": "category",
      "description": "description",
      "helpText": "helpText",
      "icon": "icon",
      "id": 1,
      "label": "label",
      "name": "file.jpg",
      "title": "title",
    },
  },
]
`;

exports[`AssetRepository Should get lease listings 1`] = `
Asset {
  "_amenities": Array [
    Amenity {
      "_attachment": Attachment {
        "_fileName": "",
        "_id": 7,
        "_isCoverImage": false,
        "_link": "https://homzhub-bucket.s3.us-east-1.amazonaws.com/096a9ac6a0c144158a1a3b893e6e8661.svg",
        "_mediaAttributes": MediaAttributes {
          "_duration": "",
          "_thumbnail": "",
          "_thumbnailHD": "",
          "_thumbnailSD": "",
          "_title": "",
          "_videoId": "",
        },
        "_mediaType": "IMAGE",
        "_name": "gym.svg",
      },
      "_id": 1,
      "_name": "Gymnasium",
    },
    Amenity {
      "_attachment": Attachment {
        "_fileName": "",
        "_id": 8,
        "_isCoverImage": false,
        "_link": "https://homzhub-bucket.s3.us-east-1.amazonaws.com/32cef5dd96c54363848f16a28157c9bd.svg",
        "_mediaAttributes": MediaAttributes {
          "_duration": "",
          "_thumbnail": "",
          "_thumbnailHD": "",
          "_thumbnailSD": "",
          "_title": "",
          "_videoId": "",
        },
        "_mediaType": "IMAGE",
        "_name": "pool.svg",
      },
      "_id": 2,
      "_name": "Swimming Pool",
    },
    Amenity {
      "_attachment": Attachment {
        "_fileName": "",
        "_id": 9,
        "_isCoverImage": false,
        "_link": "https://homzhub-bucket.s3.us-east-1.amazonaws.com/e1b50cf36b274f82832d06d534740dfe.svg",
        "_mediaAttributes": MediaAttributes {
          "_duration": "",
          "_thumbnail": "",
          "_thumbnailHD": "",
          "_thumbnailSD": "",
          "_title": "",
          "_videoId": "",
        },
        "_mediaType": "IMAGE",
        "_name": "cctv.svg",
      },
      "_id": 3,
      "_name": "CCTV Security",
    },
    Amenity {
      "_attachment": Attachment {
        "_fileName": "",
        "_id": 10,
        "_isCoverImage": false,
        "_link": "https://homzhub-bucket.s3.us-east-1.amazonaws.com/744c4c3752f34240aefad6b7ca31cdb0.svg",
        "_mediaAttributes": MediaAttributes {
          "_duration": "",
          "_thumbnail": "",
          "_thumbnailHD": "",
          "_thumbnailSD": "",
          "_title": "",
          "_videoId": "",
        },
        "_mediaType": "IMAGE",
        "_name": "parking.svg",
      },
      "_id": 4,
      "_name": "Parking",
    },
    Amenity {
      "_attachment": Attachment {
        "_fileName": "",
        "_id": 11,
        "_isCoverImage": false,
        "_link": "https://homzhub-bucket.s3.us-east-1.amazonaws.com/8ef69654fe634098bfb3b0d749bb6abe.svg",
        "_mediaAttributes": MediaAttributes {
          "_duration": "",
          "_thumbnail": "",
          "_thumbnailHD": "",
          "_thumbnailSD": "",
          "_title": "",
          "_videoId": "",
        },
        "_mediaType": "IMAGE",
        "_name": "wifi.svg",
      },
      "_id": 5,
      "_name": "Wifi",
    },
    Amenity {
      "_attachment": Attachment {
        "_fileName": "",
        "_id": 12,
        "_isCoverImage": false,
        "_link": "https://homzhub-bucket.s3.us-east-1.amazonaws.com/58f8157e972742f896044b2c943a7319.svg",
        "_mediaAttributes": MediaAttributes {
          "_duration": "",
          "_thumbnail": "",
          "_thumbnailHD": "",
          "_thumbnailSD": "",
          "_title": "",
          "_videoId": "",
        },
        "_mediaType": "IMAGE",
        "_name": "intercom.svg",
      },
      "_id": 6,
      "_name": "Intercom",
    },
    Amenity {
      "_attachment": Attachment {
        "_fileName": "",
        "_id": 13,
        "_isCoverImage": false,
        "_link": "https://homzhub-bucket.s3.us-east-1.amazonaws.com/19fe670df70c4ff8b9fc6de68bef8efb.svg",
        "_mediaAttributes": MediaAttributes {
          "_duration": "",
          "_thumbnail": "",
          "_thumbnailHD": "",
          "_thumbnailSD": "",
          "_title": "",
          "_videoId": "",
        },
        "_mediaType": "IMAGE",
        "_name": "balcony.svg",
      },
      "_id": 7,
      "_name": "Balcony",
    },
  ],
  "_assetGroup": Data {
    "_count": 0,
    "_id": 0,
    "_name": "",
  },
  "_assetType": Data {
    "_count": 0,
    "_id": 0,
    "_name": "",
  },
  "_attachments": Array [
    Attachment {
      "_fileName": "prof.jpg",
      "_id": 0,
      "_isCoverImage": true,
      "_link": "https://homzhub-bucket.s3.amazonaws.com/asset_images/8e8c48fc-c089-11ea-8247-34e12d38d70eprof.jpg",
      "_mediaAttributes": MediaAttributes {
        "_duration": "",
        "_thumbnail": "",
        "_thumbnailHD": "",
        "_thumbnailSD": "",
        "_title": "",
        "_videoId": "",
      },
      "_mediaType": "IMAGE",
      "_name": "",
    },
    Attachment {
      "_fileName": "DjangoBackendLLD (1).jpg",
      "_id": 0,
      "_isCoverImage": false,
      "_link": "https://homzhub-bucket.s3.amazonaws.com/asset_images/01d71336-cd92-11ea-972b-34e12d38d70eDjangoBackendLLD%201.jpg",
      "_mediaAttributes": MediaAttributes {
        "_duration": "",
        "_thumbnail": "",
        "_thumbnailHD": "",
        "_thumbnailSD": "",
        "_title": "",
        "_videoId": "",
      },
      "_mediaType": "IMAGE",
      "_name": "",
    },
  ],
  "_blockNumber": "B",
  "_carpetArea": 5000,
  "_carpetAreaUnit": "SQ_FT",
  "_contacts": User {
    "_accessToken": "",
    "_countryCode": "+91",
    "_email": "anuvrat.somnath@nineleaps.com",
    "_fullName": "Anuvrat Somnath",
    "_id": 1,
    "_phoneNumber": "7903470293",
    "_refreshToken": "",
  },
  "_description": "It is a long established fact that the readable content of a page when looking at its layout.",
  "_features": Array [
    AssetFeature {
      "_localeKey": "security_deposit",
      "_name": "Security Deposit",
      "_value": "₹ 2 Lacs",
    },
    AssetFeature {
      "_localeKey": "min_lease_period",
      "_name": "Min Lease Period",
      "_value": "3 Months",
    },
    AssetFeature {
      "_localeKey": "maintenance_paid_by",
      "_name": "Maintenance Paid By",
      "_value": "Owner",
    },
    AssetFeature {
      "_localeKey": "utilities_paid_by",
      "_name": "Utilities Paid By",
      "_value": "Tenant",
    },
    AssetFeature {
      "_localeKey": "maintenance",
      "_name": "Maintenance",
      "_value": "₹ 5,000",
    },
    AssetFeature {
      "_localeKey": "building_age",
      "_name": "Building Age",
      "_value": "5 Years",
    },
    AssetFeature {
      "_localeKey": "building_type",
      "_name": "Building Type",
      "_value": "Apartment",
    },
  ],
  "_floorNumber": 1,
  "_highlights": Array [
    AssetHighlight {
      "_covered": true,
      "_name": "Power Backup",
    },
    AssetHighlight {
      "_covered": true,
      "_name": "Gated Society",
    },
  ],
  "_id": 1,
  "_isFavorite": false,
  "_latitude": 25.619,
  "_leaseTerm": null,
  "_longitude": 85.123,
  "_maintenancePaymentSchedule": "",
  "_postedOn": "2020-06-03",
  "_progressPercentage": 0,
  "_projectName": "Malti Kunj",
  "_saleTerm": null,
  "_spaces": Array [
    Data {
      "_count": 1,
      "_id": 1,
      "_name": "Bedroom",
    },
    Data {
      "_count": 1,
      "_id": 2,
      "_name": "Bathroom",
    },
  ],
  "_totalFloors": 4,
  "_unitNumber": "41",
  "_verifications": Verification {
    "_description": "It was popularised in the 1960s with the release of Letraset sheets.",
    "_verificationStatus": 3,
  },
}
`;

exports[`AssetRepository Should get property images by property id 1`] = `
Array [
  Object {
    "asset": 10,
    "attachment": 14,
    "description": "image.png",
    "id": 1,
    "is_cover_image": true,
    "link": "www.google.com",
  },
]
`;

exports[`AssetRepository Should get ratings 1`] = `
Array [
  AssetReview {
    "_experienceArea": "experience area",
    "_id": 1,
    "_rating": 2,
  },
]
`;

exports[`AssetRepository Should get sale listings 1`] = `
Asset {
  "_amenities": Array [
    Amenity {
      "_attachment": Attachment {
        "_fileName": "",
        "_id": 7,
        "_isCoverImage": false,
        "_link": "https://homzhub-bucket.s3.us-east-1.amazonaws.com/096a9ac6a0c144158a1a3b893e6e8661.svg",
        "_mediaAttributes": MediaAttributes {
          "_duration": "",
          "_thumbnail": "",
          "_thumbnailHD": "",
          "_thumbnailSD": "",
          "_title": "",
          "_videoId": "",
        },
        "_mediaType": "IMAGE",
        "_name": "gym.svg",
      },
      "_id": 1,
      "_name": "Gymnasium",
    },
    Amenity {
      "_attachment": Attachment {
        "_fileName": "",
        "_id": 8,
        "_isCoverImage": false,
        "_link": "https://homzhub-bucket.s3.us-east-1.amazonaws.com/32cef5dd96c54363848f16a28157c9bd.svg",
        "_mediaAttributes": MediaAttributes {
          "_duration": "",
          "_thumbnail": "",
          "_thumbnailHD": "",
          "_thumbnailSD": "",
          "_title": "",
          "_videoId": "",
        },
        "_mediaType": "IMAGE",
        "_name": "pool.svg",
      },
      "_id": 2,
      "_name": "Swimming Pool",
    },
    Amenity {
      "_attachment": Attachment {
        "_fileName": "",
        "_id": 9,
        "_isCoverImage": false,
        "_link": "https://homzhub-bucket.s3.us-east-1.amazonaws.com/e1b50cf36b274f82832d06d534740dfe.svg",
        "_mediaAttributes": MediaAttributes {
          "_duration": "",
          "_thumbnail": "",
          "_thumbnailHD": "",
          "_thumbnailSD": "",
          "_title": "",
          "_videoId": "",
        },
        "_mediaType": "IMAGE",
        "_name": "cctv.svg",
      },
      "_id": 3,
      "_name": "CCTV Security",
    },
    Amenity {
      "_attachment": Attachment {
        "_fileName": "",
        "_id": 10,
        "_isCoverImage": false,
        "_link": "https://homzhub-bucket.s3.us-east-1.amazonaws.com/744c4c3752f34240aefad6b7ca31cdb0.svg",
        "_mediaAttributes": MediaAttributes {
          "_duration": "",
          "_thumbnail": "",
          "_thumbnailHD": "",
          "_thumbnailSD": "",
          "_title": "",
          "_videoId": "",
        },
        "_mediaType": "IMAGE",
        "_name": "parking.svg",
      },
      "_id": 4,
      "_name": "Parking",
    },
    Amenity {
      "_attachment": Attachment {
        "_fileName": "",
        "_id": 11,
        "_isCoverImage": false,
        "_link": "https://homzhub-bucket.s3.us-east-1.amazonaws.com/8ef69654fe634098bfb3b0d749bb6abe.svg",
        "_mediaAttributes": MediaAttributes {
          "_duration": "",
          "_thumbnail": "",
          "_thumbnailHD": "",
          "_thumbnailSD": "",
          "_title": "",
          "_videoId": "",
        },
        "_mediaType": "IMAGE",
        "_name": "wifi.svg",
      },
      "_id": 5,
      "_name": "Wifi",
    },
    Amenity {
      "_attachment": Attachment {
        "_fileName": "",
        "_id": 12,
        "_isCoverImage": false,
        "_link": "https://homzhub-bucket.s3.us-east-1.amazonaws.com/58f8157e972742f896044b2c943a7319.svg",
        "_mediaAttributes": MediaAttributes {
          "_duration": "",
          "_thumbnail": "",
          "_thumbnailHD": "",
          "_thumbnailSD": "",
          "_title": "",
          "_videoId": "",
        },
        "_mediaType": "IMAGE",
        "_name": "intercom.svg",
      },
      "_id": 6,
      "_name": "Intercom",
    },
    Amenity {
      "_attachment": Attachment {
        "_fileName": "",
        "_id": 13,
        "_isCoverImage": false,
        "_link": "https://homzhub-bucket.s3.us-east-1.amazonaws.com/19fe670df70c4ff8b9fc6de68bef8efb.svg",
        "_mediaAttributes": MediaAttributes {
          "_duration": "",
          "_thumbnail": "",
          "_thumbnailHD": "",
          "_thumbnailSD": "",
          "_title": "",
          "_videoId": "",
        },
        "_mediaType": "IMAGE",
        "_name": "balcony.svg",
      },
      "_id": 7,
      "_name": "Balcony",
    },
  ],
  "_assetGroup": Data {
    "_count": 0,
    "_id": 0,
    "_name": "",
  },
  "_assetType": Data {
    "_count": 0,
    "_id": 0,
    "_name": "",
  },
  "_attachments": Array [
    Attachment {
      "_fileName": "prof.jpg",
      "_id": 0,
      "_isCoverImage": true,
      "_link": "https://homzhub-bucket.s3.amazonaws.com/asset_images/8e8c48fc-c089-11ea-8247-34e12d38d70eprof.jpg",
      "_mediaAttributes": MediaAttributes {
        "_duration": "",
        "_thumbnail": "",
        "_thumbnailHD": "",
        "_thumbnailSD": "",
        "_title": "",
        "_videoId": "",
      },
      "_mediaType": "IMAGE",
      "_name": "",
    },
    Attachment {
      "_fileName": "DjangoBackendLLD (1).jpg",
      "_id": 0,
      "_isCoverImage": false,
      "_link": "https://homzhub-bucket.s3.amazonaws.com/asset_images/01d71336-cd92-11ea-972b-34e12d38d70eDjangoBackendLLD%201.jpg",
      "_mediaAttributes": MediaAttributes {
        "_duration": "",
        "_thumbnail": "",
        "_thumbnailHD": "",
        "_thumbnailSD": "",
        "_title": "",
        "_videoId": "",
      },
      "_mediaType": "IMAGE",
      "_name": "",
    },
  ],
  "_blockNumber": "B",
  "_carpetArea": 5000,
  "_carpetAreaUnit": "SQ_FT",
  "_contacts": User {
    "_accessToken": "",
    "_countryCode": "+91",
    "_email": "anuvrat.somnath@nineleaps.com",
    "_fullName": "Anuvrat Somnath",
    "_id": 1,
    "_phoneNumber": "7903470293",
    "_refreshToken": "",
  },
  "_description": "It is a long established fact that the readable content of a page when looking at its layout.",
  "_features": Array [
    AssetFeature {
      "_localeKey": "security_deposit",
      "_name": "Security Deposit",
      "_value": "₹ 2 Lacs",
    },
    AssetFeature {
      "_localeKey": "min_lease_period",
      "_name": "Min Lease Period",
      "_value": "3 Months",
    },
    AssetFeature {
      "_localeKey": "maintenance_paid_by",
      "_name": "Maintenance Paid By",
      "_value": "Owner",
    },
    AssetFeature {
      "_localeKey": "utilities_paid_by",
      "_name": "Utilities Paid By",
      "_value": "Tenant",
    },
    AssetFeature {
      "_localeKey": "maintenance",
      "_name": "Maintenance",
      "_value": "₹ 5,000",
    },
    AssetFeature {
      "_localeKey": "building_age",
      "_name": "Building Age",
      "_value": "5 Years",
    },
    AssetFeature {
      "_localeKey": "building_type",
      "_name": "Building Type",
      "_value": "Apartment",
    },
  ],
  "_floorNumber": 1,
  "_highlights": Array [
    AssetHighlight {
      "_covered": true,
      "_name": "Power Backup",
    },
    AssetHighlight {
      "_covered": true,
      "_name": "Gated Society",
    },
  ],
  "_id": 1,
  "_isFavorite": false,
  "_latitude": 25.619,
  "_leaseTerm": null,
  "_longitude": 85.123,
  "_maintenancePaymentSchedule": "",
  "_postedOn": "2020-06-03",
  "_progressPercentage": 0,
  "_projectName": "Malti Kunj",
  "_saleTerm": null,
  "_spaces": Array [
    Data {
      "_count": 1,
      "_id": 1,
      "_name": "Bedroom",
    },
    Data {
      "_count": 1,
      "_id": 2,
      "_name": "Bathroom",
    },
  ],
  "_totalFloors": 4,
  "_unitNumber": "41",
  "_verifications": Verification {
    "_description": "It was popularised in the 1960s with the release of Letraset sheets.",
    "_verificationStatus": 3,
  },
}
`;

exports[`AssetRepository Should get similar properties for rent 1`] = `
Array [
  Asset {
    "_amenities": Array [
      Amenity {
        "_attachment": Attachment {
          "_fileName": "",
          "_id": 7,
          "_isCoverImage": false,
          "_link": "https://homzhub-bucket.s3.us-east-1.amazonaws.com/096a9ac6a0c144158a1a3b893e6e8661.svg",
          "_mediaAttributes": MediaAttributes {
            "_duration": "",
            "_thumbnail": "",
            "_thumbnailHD": "",
            "_thumbnailSD": "",
            "_title": "",
            "_videoId": "",
          },
          "_mediaType": "IMAGE",
          "_name": "gym.svg",
        },
        "_id": 1,
        "_name": "Gymnasium",
      },
      Amenity {
        "_attachment": Attachment {
          "_fileName": "",
          "_id": 8,
          "_isCoverImage": false,
          "_link": "https://homzhub-bucket.s3.us-east-1.amazonaws.com/32cef5dd96c54363848f16a28157c9bd.svg",
          "_mediaAttributes": MediaAttributes {
            "_duration": "",
            "_thumbnail": "",
            "_thumbnailHD": "",
            "_thumbnailSD": "",
            "_title": "",
            "_videoId": "",
          },
          "_mediaType": "IMAGE",
          "_name": "pool.svg",
        },
        "_id": 2,
        "_name": "Swimming Pool",
      },
      Amenity {
        "_attachment": Attachment {
          "_fileName": "",
          "_id": 9,
          "_isCoverImage": false,
          "_link": "https://homzhub-bucket.s3.us-east-1.amazonaws.com/e1b50cf36b274f82832d06d534740dfe.svg",
          "_mediaAttributes": MediaAttributes {
            "_duration": "",
            "_thumbnail": "",
            "_thumbnailHD": "",
            "_thumbnailSD": "",
            "_title": "",
            "_videoId": "",
          },
          "_mediaType": "IMAGE",
          "_name": "cctv.svg",
        },
        "_id": 3,
        "_name": "CCTV Security",
      },
      Amenity {
        "_attachment": Attachment {
          "_fileName": "",
          "_id": 10,
          "_isCoverImage": false,
          "_link": "https://homzhub-bucket.s3.us-east-1.amazonaws.com/744c4c3752f34240aefad6b7ca31cdb0.svg",
          "_mediaAttributes": MediaAttributes {
            "_duration": "",
            "_thumbnail": "",
            "_thumbnailHD": "",
            "_thumbnailSD": "",
            "_title": "",
            "_videoId": "",
          },
          "_mediaType": "IMAGE",
          "_name": "parking.svg",
        },
        "_id": 4,
        "_name": "Parking",
      },
      Amenity {
        "_attachment": Attachment {
          "_fileName": "",
          "_id": 11,
          "_isCoverImage": false,
          "_link": "https://homzhub-bucket.s3.us-east-1.amazonaws.com/8ef69654fe634098bfb3b0d749bb6abe.svg",
          "_mediaAttributes": MediaAttributes {
            "_duration": "",
            "_thumbnail": "",
            "_thumbnailHD": "",
            "_thumbnailSD": "",
            "_title": "",
            "_videoId": "",
          },
          "_mediaType": "IMAGE",
          "_name": "wifi.svg",
        },
        "_id": 5,
        "_name": "Wifi",
      },
      Amenity {
        "_attachment": Attachment {
          "_fileName": "",
          "_id": 12,
          "_isCoverImage": false,
          "_link": "https://homzhub-bucket.s3.us-east-1.amazonaws.com/58f8157e972742f896044b2c943a7319.svg",
          "_mediaAttributes": MediaAttributes {
            "_duration": "",
            "_thumbnail": "",
            "_thumbnailHD": "",
            "_thumbnailSD": "",
            "_title": "",
            "_videoId": "",
          },
          "_mediaType": "IMAGE",
          "_name": "intercom.svg",
        },
        "_id": 6,
        "_name": "Intercom",
      },
      Amenity {
        "_attachment": Attachment {
          "_fileName": "",
          "_id": 13,
          "_isCoverImage": false,
          "_link": "https://homzhub-bucket.s3.us-east-1.amazonaws.com/19fe670df70c4ff8b9fc6de68bef8efb.svg",
          "_mediaAttributes": MediaAttributes {
            "_duration": "",
            "_thumbnail": "",
            "_thumbnailHD": "",
            "_thumbnailSD": "",
            "_title": "",
            "_videoId": "",
          },
          "_mediaType": "IMAGE",
          "_name": "balcony.svg",
        },
        "_id": 7,
        "_name": "Balcony",
      },
    ],
    "_assetGroup": Data {
      "_count": 0,
      "_id": 0,
      "_name": "",
    },
    "_assetType": Data {
      "_count": 0,
      "_id": 0,
      "_name": "",
    },
    "_attachments": Array [
      Attachment {
        "_fileName": "prof.jpg",
        "_id": 0,
        "_isCoverImage": true,
        "_link": "https://homzhub-bucket.s3.amazonaws.com/asset_images/8e8c48fc-c089-11ea-8247-34e12d38d70eprof.jpg",
        "_mediaAttributes": MediaAttributes {
          "_duration": "",
          "_thumbnail": "",
          "_thumbnailHD": "",
          "_thumbnailSD": "",
          "_title": "",
          "_videoId": "",
        },
        "_mediaType": "IMAGE",
        "_name": "",
      },
      Attachment {
        "_fileName": "DjangoBackendLLD (1).jpg",
        "_id": 0,
        "_isCoverImage": false,
        "_link": "https://homzhub-bucket.s3.amazonaws.com/asset_images/01d71336-cd92-11ea-972b-34e12d38d70eDjangoBackendLLD%201.jpg",
        "_mediaAttributes": MediaAttributes {
          "_duration": "",
          "_thumbnail": "",
          "_thumbnailHD": "",
          "_thumbnailSD": "",
          "_title": "",
          "_videoId": "",
        },
        "_mediaType": "IMAGE",
        "_name": "",
      },
    ],
    "_blockNumber": "B",
    "_carpetArea": 5000,
    "_carpetAreaUnit": "SQ_FT",
    "_contacts": User {
      "_accessToken": "",
      "_countryCode": "+91",
      "_email": "anuvrat.somnath@nineleaps.com",
      "_fullName": "Anuvrat Somnath",
      "_id": 1,
      "_phoneNumber": "7903470293",
      "_refreshToken": "",
    },
    "_description": "It is a long established fact that the readable content of a page when looking at its layout.",
    "_features": Array [
      AssetFeature {
        "_localeKey": "security_deposit",
        "_name": "Security Deposit",
        "_value": "₹ 2 Lacs",
      },
      AssetFeature {
        "_localeKey": "min_lease_period",
        "_name": "Min Lease Period",
        "_value": "3 Months",
      },
      AssetFeature {
        "_localeKey": "maintenance_paid_by",
        "_name": "Maintenance Paid By",
        "_value": "Owner",
      },
      AssetFeature {
        "_localeKey": "utilities_paid_by",
        "_name": "Utilities Paid By",
        "_value": "Tenant",
      },
      AssetFeature {
        "_localeKey": "maintenance",
        "_name": "Maintenance",
        "_value": "₹ 5,000",
      },
      AssetFeature {
        "_localeKey": "building_age",
        "_name": "Building Age",
        "_value": "5 Years",
      },
      AssetFeature {
        "_localeKey": "building_type",
        "_name": "Building Type",
        "_value": "Apartment",
      },
    ],
    "_floorNumber": 1,
    "_highlights": Array [
      AssetHighlight {
        "_covered": true,
        "_name": "Power Backup",
      },
      AssetHighlight {
        "_covered": true,
        "_name": "Gated Society",
      },
    ],
    "_id": 1,
    "_isFavorite": false,
    "_latitude": 25.619,
    "_leaseTerm": null,
    "_longitude": 85.123,
    "_maintenancePaymentSchedule": "",
    "_postedOn": "2020-06-03",
    "_progressPercentage": 0,
    "_projectName": "Malti Kunj",
    "_saleTerm": null,
    "_spaces": Array [
      Data {
        "_count": 1,
        "_id": 1,
        "_name": "Bedroom",
      },
      Data {
        "_count": 1,
        "_id": 2,
        "_name": "Bathroom",
      },
    ],
    "_totalFloors": 4,
    "_unitNumber": "41",
    "_verifications": Verification {
      "_description": "It was popularised in the 1960s with the release of Letraset sheets.",
      "_verificationStatus": 3,
    },
  },
]
`;

exports[`AssetRepository Should get similar properties for sale 1`] = `
Array [
  Asset {
    "_amenities": Array [
      Amenity {
        "_attachment": Attachment {
          "_fileName": "",
          "_id": 7,
          "_isCoverImage": false,
          "_link": "https://homzhub-bucket.s3.us-east-1.amazonaws.com/096a9ac6a0c144158a1a3b893e6e8661.svg",
          "_mediaAttributes": MediaAttributes {
            "_duration": "",
            "_thumbnail": "",
            "_thumbnailHD": "",
            "_thumbnailSD": "",
            "_title": "",
            "_videoId": "",
          },
          "_mediaType": "IMAGE",
          "_name": "gym.svg",
        },
        "_id": 1,
        "_name": "Gymnasium",
      },
      Amenity {
        "_attachment": Attachment {
          "_fileName": "",
          "_id": 8,
          "_isCoverImage": false,
          "_link": "https://homzhub-bucket.s3.us-east-1.amazonaws.com/32cef5dd96c54363848f16a28157c9bd.svg",
          "_mediaAttributes": MediaAttributes {
            "_duration": "",
            "_thumbnail": "",
            "_thumbnailHD": "",
            "_thumbnailSD": "",
            "_title": "",
            "_videoId": "",
          },
          "_mediaType": "IMAGE",
          "_name": "pool.svg",
        },
        "_id": 2,
        "_name": "Swimming Pool",
      },
      Amenity {
        "_attachment": Attachment {
          "_fileName": "",
          "_id": 9,
          "_isCoverImage": false,
          "_link": "https://homzhub-bucket.s3.us-east-1.amazonaws.com/e1b50cf36b274f82832d06d534740dfe.svg",
          "_mediaAttributes": MediaAttributes {
            "_duration": "",
            "_thumbnail": "",
            "_thumbnailHD": "",
            "_thumbnailSD": "",
            "_title": "",
            "_videoId": "",
          },
          "_mediaType": "IMAGE",
          "_name": "cctv.svg",
        },
        "_id": 3,
        "_name": "CCTV Security",
      },
      Amenity {
        "_attachment": Attachment {
          "_fileName": "",
          "_id": 10,
          "_isCoverImage": false,
          "_link": "https://homzhub-bucket.s3.us-east-1.amazonaws.com/744c4c3752f34240aefad6b7ca31cdb0.svg",
          "_mediaAttributes": MediaAttributes {
            "_duration": "",
            "_thumbnail": "",
            "_thumbnailHD": "",
            "_thumbnailSD": "",
            "_title": "",
            "_videoId": "",
          },
          "_mediaType": "IMAGE",
          "_name": "parking.svg",
        },
        "_id": 4,
        "_name": "Parking",
      },
      Amenity {
        "_attachment": Attachment {
          "_fileName": "",
          "_id": 11,
          "_isCoverImage": false,
          "_link": "https://homzhub-bucket.s3.us-east-1.amazonaws.com/8ef69654fe634098bfb3b0d749bb6abe.svg",
          "_mediaAttributes": MediaAttributes {
            "_duration": "",
            "_thumbnail": "",
            "_thumbnailHD": "",
            "_thumbnailSD": "",
            "_title": "",
            "_videoId": "",
          },
          "_mediaType": "IMAGE",
          "_name": "wifi.svg",
        },
        "_id": 5,
        "_name": "Wifi",
      },
      Amenity {
        "_attachment": Attachment {
          "_fileName": "",
          "_id": 12,
          "_isCoverImage": false,
          "_link": "https://homzhub-bucket.s3.us-east-1.amazonaws.com/58f8157e972742f896044b2c943a7319.svg",
          "_mediaAttributes": MediaAttributes {
            "_duration": "",
            "_thumbnail": "",
            "_thumbnailHD": "",
            "_thumbnailSD": "",
            "_title": "",
            "_videoId": "",
          },
          "_mediaType": "IMAGE",
          "_name": "intercom.svg",
        },
        "_id": 6,
        "_name": "Intercom",
      },
      Amenity {
        "_attachment": Attachment {
          "_fileName": "",
          "_id": 13,
          "_isCoverImage": false,
          "_link": "https://homzhub-bucket.s3.us-east-1.amazonaws.com/19fe670df70c4ff8b9fc6de68bef8efb.svg",
          "_mediaAttributes": MediaAttributes {
            "_duration": "",
            "_thumbnail": "",
            "_thumbnailHD": "",
            "_thumbnailSD": "",
            "_title": "",
            "_videoId": "",
          },
          "_mediaType": "IMAGE",
          "_name": "balcony.svg",
        },
        "_id": 7,
        "_name": "Balcony",
      },
    ],
    "_assetGroup": Data {
      "_count": 0,
      "_id": 0,
      "_name": "",
    },
    "_assetType": Data {
      "_count": 0,
      "_id": 0,
      "_name": "",
    },
    "_attachments": Array [
      Attachment {
        "_fileName": "prof.jpg",
        "_id": 0,
        "_isCoverImage": true,
        "_link": "https://homzhub-bucket.s3.amazonaws.com/asset_images/8e8c48fc-c089-11ea-8247-34e12d38d70eprof.jpg",
        "_mediaAttributes": MediaAttributes {
          "_duration": "",
          "_thumbnail": "",
          "_thumbnailHD": "",
          "_thumbnailSD": "",
          "_title": "",
          "_videoId": "",
        },
        "_mediaType": "IMAGE",
        "_name": "",
      },
      Attachment {
        "_fileName": "DjangoBackendLLD (1).jpg",
        "_id": 0,
        "_isCoverImage": false,
        "_link": "https://homzhub-bucket.s3.amazonaws.com/asset_images/01d71336-cd92-11ea-972b-34e12d38d70eDjangoBackendLLD%201.jpg",
        "_mediaAttributes": MediaAttributes {
          "_duration": "",
          "_thumbnail": "",
          "_thumbnailHD": "",
          "_thumbnailSD": "",
          "_title": "",
          "_videoId": "",
        },
        "_mediaType": "IMAGE",
        "_name": "",
      },
    ],
    "_blockNumber": "B",
    "_carpetArea": 5000,
    "_carpetAreaUnit": "SQ_FT",
    "_contacts": User {
      "_accessToken": "",
      "_countryCode": "+91",
      "_email": "anuvrat.somnath@nineleaps.com",
      "_fullName": "Anuvrat Somnath",
      "_id": 1,
      "_phoneNumber": "7903470293",
      "_refreshToken": "",
    },
    "_description": "It is a long established fact that the readable content of a page when looking at its layout.",
    "_features": Array [
      AssetFeature {
        "_localeKey": "security_deposit",
        "_name": "Security Deposit",
        "_value": "₹ 2 Lacs",
      },
      AssetFeature {
        "_localeKey": "min_lease_period",
        "_name": "Min Lease Period",
        "_value": "3 Months",
      },
      AssetFeature {
        "_localeKey": "maintenance_paid_by",
        "_name": "Maintenance Paid By",
        "_value": "Owner",
      },
      AssetFeature {
        "_localeKey": "utilities_paid_by",
        "_name": "Utilities Paid By",
        "_value": "Tenant",
      },
      AssetFeature {
        "_localeKey": "maintenance",
        "_name": "Maintenance",
        "_value": "₹ 5,000",
      },
      AssetFeature {
        "_localeKey": "building_age",
        "_name": "Building Age",
        "_value": "5 Years",
      },
      AssetFeature {
        "_localeKey": "building_type",
        "_name": "Building Type",
        "_value": "Apartment",
      },
    ],
    "_floorNumber": 1,
    "_highlights": Array [
      AssetHighlight {
        "_covered": true,
        "_name": "Power Backup",
      },
      AssetHighlight {
        "_covered": true,
        "_name": "Gated Society",
      },
    ],
    "_id": 1,
    "_isFavorite": false,
    "_latitude": 25.619,
    "_leaseTerm": null,
    "_longitude": 85.123,
    "_maintenancePaymentSchedule": "",
    "_postedOn": "2020-06-03",
    "_progressPercentage": 0,
    "_projectName": "Malti Kunj",
    "_saleTerm": null,
    "_spaces": Array [
      Data {
        "_count": 1,
        "_id": 1,
        "_name": "Bedroom",
      },
      Data {
        "_count": 1,
        "_id": 2,
        "_name": "Bathroom",
      },
    ],
    "_totalFloors": 4,
    "_unitNumber": "41",
    "_verifications": Verification {
      "_description": "It was popularised in the 1960s with the release of Letraset sheets.",
      "_verificationStatus": 3,
    },
  },
]
`;

exports[`AssetRepository Should mark attachment as cover image 1`] = `
Object {
  "cover_updated": true,
}
`;

exports[`AssetRepository Should post attachment for property 1`] = `undefined`;

exports[`AssetRepository Should post verification document 1`] = `undefined`;

exports[`AssetRepository should fetch a asset data 1`] = `
Array [
  Object {
    "asset_types": Array [
      Object {
        "id": 1,
        "name": "Residential House",
      },
      Object {
        "id": 2,
        "name": "Apartment / Condo",
      },
      Object {
        "id": 3,
        "name": "Villa",
      },
      Object {
        "id": 4,
        "name": "Penthouse",
      },
      Object {
        "id": 5,
        "name": "Studio Apartment",
      },
      Object {
        "id": 6,
        "name": "Independant Floor",
      },
    ],
    "id": 1,
    "name": "Residential",
    "space_types": Array [
      Object {
        "id": 1,
        "name": "Bedroom",
      },
      Object {
        "id": 2,
        "name": "Bathroom",
      },
      Object {
        "id": 3,
        "name": "Balcony",
      },
    ],
  },
  Object {
    "asset_types": Array [
      Object {
        "id": 7,
        "name": "Commercial Office Space",
      },
      Object {
        "id": 8,
        "name": "Office in IT park/SEZ",
      },
      Object {
        "id": 9,
        "name": "Commercial Showroom",
      },
      Object {
        "id": 10,
        "name": "Warehouse / Godown",
      },
    ],
    "id": 2,
    "name": "Commercial",
    "space_types": Array [
      Object {
        "id": 2,
        "name": "Bathroom",
      },
    ],
  },
]
`;

exports[`AssetRepository should fetch a asset detail 1`] = `
Asset {
  "_amenities": Array [
    Amenity {
      "_attachment": Attachment {
        "_fileName": "",
        "_id": 7,
        "_isCoverImage": false,
        "_link": "https://homzhub-bucket.s3.us-east-1.amazonaws.com/096a9ac6a0c144158a1a3b893e6e8661.svg",
        "_mediaAttributes": MediaAttributes {
          "_duration": "",
          "_thumbnail": "",
          "_thumbnailHD": "",
          "_thumbnailSD": "",
          "_title": "",
          "_videoId": "",
        },
        "_mediaType": "IMAGE",
        "_name": "gym.svg",
      },
      "_id": 1,
      "_name": "Gymnasium",
    },
    Amenity {
      "_attachment": Attachment {
        "_fileName": "",
        "_id": 8,
        "_isCoverImage": false,
        "_link": "https://homzhub-bucket.s3.us-east-1.amazonaws.com/32cef5dd96c54363848f16a28157c9bd.svg",
        "_mediaAttributes": MediaAttributes {
          "_duration": "",
          "_thumbnail": "",
          "_thumbnailHD": "",
          "_thumbnailSD": "",
          "_title": "",
          "_videoId": "",
        },
        "_mediaType": "IMAGE",
        "_name": "pool.svg",
      },
      "_id": 2,
      "_name": "Swimming Pool",
    },
    Amenity {
      "_attachment": Attachment {
        "_fileName": "",
        "_id": 9,
        "_isCoverImage": false,
        "_link": "https://homzhub-bucket.s3.us-east-1.amazonaws.com/e1b50cf36b274f82832d06d534740dfe.svg",
        "_mediaAttributes": MediaAttributes {
          "_duration": "",
          "_thumbnail": "",
          "_thumbnailHD": "",
          "_thumbnailSD": "",
          "_title": "",
          "_videoId": "",
        },
        "_mediaType": "IMAGE",
        "_name": "cctv.svg",
      },
      "_id": 3,
      "_name": "CCTV Security",
    },
    Amenity {
      "_attachment": Attachment {
        "_fileName": "",
        "_id": 10,
        "_isCoverImage": false,
        "_link": "https://homzhub-bucket.s3.us-east-1.amazonaws.com/744c4c3752f34240aefad6b7ca31cdb0.svg",
        "_mediaAttributes": MediaAttributes {
          "_duration": "",
          "_thumbnail": "",
          "_thumbnailHD": "",
          "_thumbnailSD": "",
          "_title": "",
          "_videoId": "",
        },
        "_mediaType": "IMAGE",
        "_name": "parking.svg",
      },
      "_id": 4,
      "_name": "Parking",
    },
    Amenity {
      "_attachment": Attachment {
        "_fileName": "",
        "_id": 11,
        "_isCoverImage": false,
        "_link": "https://homzhub-bucket.s3.us-east-1.amazonaws.com/8ef69654fe634098bfb3b0d749bb6abe.svg",
        "_mediaAttributes": MediaAttributes {
          "_duration": "",
          "_thumbnail": "",
          "_thumbnailHD": "",
          "_thumbnailSD": "",
          "_title": "",
          "_videoId": "",
        },
        "_mediaType": "IMAGE",
        "_name": "wifi.svg",
      },
      "_id": 5,
      "_name": "Wifi",
    },
    Amenity {
      "_attachment": Attachment {
        "_fileName": "",
        "_id": 12,
        "_isCoverImage": false,
        "_link": "https://homzhub-bucket.s3.us-east-1.amazonaws.com/58f8157e972742f896044b2c943a7319.svg",
        "_mediaAttributes": MediaAttributes {
          "_duration": "",
          "_thumbnail": "",
          "_thumbnailHD": "",
          "_thumbnailSD": "",
          "_title": "",
          "_videoId": "",
        },
        "_mediaType": "IMAGE",
        "_name": "intercom.svg",
      },
      "_id": 6,
      "_name": "Intercom",
    },
    Amenity {
      "_attachment": Attachment {
        "_fileName": "",
        "_id": 13,
        "_isCoverImage": false,
        "_link": "https://homzhub-bucket.s3.us-east-1.amazonaws.com/19fe670df70c4ff8b9fc6de68bef8efb.svg",
        "_mediaAttributes": MediaAttributes {
          "_duration": "",
          "_thumbnail": "",
          "_thumbnailHD": "",
          "_thumbnailSD": "",
          "_title": "",
          "_videoId": "",
        },
        "_mediaType": "IMAGE",
        "_name": "balcony.svg",
      },
      "_id": 7,
      "_name": "Balcony",
    },
  ],
  "_assetGroup": Data {
    "_count": 0,
    "_id": 0,
    "_name": "",
  },
  "_assetType": Data {
    "_count": 0,
    "_id": 0,
    "_name": "",
  },
  "_attachments": Array [
    Attachment {
      "_fileName": "prof.jpg",
      "_id": 0,
      "_isCoverImage": true,
      "_link": "https://homzhub-bucket.s3.amazonaws.com/asset_images/8e8c48fc-c089-11ea-8247-34e12d38d70eprof.jpg",
      "_mediaAttributes": MediaAttributes {
        "_duration": "",
        "_thumbnail": "",
        "_thumbnailHD": "",
        "_thumbnailSD": "",
        "_title": "",
        "_videoId": "",
      },
      "_mediaType": "IMAGE",
      "_name": "",
    },
    Attachment {
      "_fileName": "DjangoBackendLLD (1).jpg",
      "_id": 0,
      "_isCoverImage": false,
      "_link": "https://homzhub-bucket.s3.amazonaws.com/asset_images/01d71336-cd92-11ea-972b-34e12d38d70eDjangoBackendLLD%201.jpg",
      "_mediaAttributes": MediaAttributes {
        "_duration": "",
        "_thumbnail": "",
        "_thumbnailHD": "",
        "_thumbnailSD": "",
        "_title": "",
        "_videoId": "",
      },
      "_mediaType": "IMAGE",
      "_name": "",
    },
  ],
  "_blockNumber": "B",
  "_carpetArea": 5000,
  "_carpetAreaUnit": "SQ_FT",
  "_contacts": User {
    "_accessToken": "",
    "_countryCode": "+91",
    "_email": "anuvrat.somnath@nineleaps.com",
    "_fullName": "Anuvrat Somnath",
    "_id": 1,
    "_phoneNumber": "7903470293",
    "_refreshToken": "",
  },
  "_description": "It is a long established fact that the readable content of a page when looking at its layout.",
  "_features": Array [
    AssetFeature {
      "_localeKey": "security_deposit",
      "_name": "Security Deposit",
      "_value": "₹ 2 Lacs",
    },
    AssetFeature {
      "_localeKey": "min_lease_period",
      "_name": "Min Lease Period",
      "_value": "3 Months",
    },
    AssetFeature {
      "_localeKey": "maintenance_paid_by",
      "_name": "Maintenance Paid By",
      "_value": "Owner",
    },
    AssetFeature {
      "_localeKey": "utilities_paid_by",
      "_name": "Utilities Paid By",
      "_value": "Tenant",
    },
    AssetFeature {
      "_localeKey": "maintenance",
      "_name": "Maintenance",
      "_value": "₹ 5,000",
    },
    AssetFeature {
      "_localeKey": "building_age",
      "_name": "Building Age",
      "_value": "5 Years",
    },
    AssetFeature {
      "_localeKey": "building_type",
      "_name": "Building Type",
      "_value": "Apartment",
    },
  ],
  "_floorNumber": 1,
  "_highlights": Array [
    AssetHighlight {
      "_covered": true,
      "_name": "Power Backup",
    },
    AssetHighlight {
      "_covered": true,
      "_name": "Gated Society",
    },
  ],
  "_id": 1,
  "_isFavorite": false,
  "_latitude": 25.619,
  "_leaseTerm": null,
  "_longitude": 85.123,
  "_maintenancePaymentSchedule": "",
  "_postedOn": "2020-06-03",
  "_progressPercentage": 0,
  "_projectName": "Malti Kunj",
  "_saleTerm": null,
  "_spaces": Array [
    Data {
      "_count": 1,
      "_id": 1,
      "_name": "Bedroom",
    },
    Data {
      "_count": 1,
      "_id": 2,
      "_name": "Bathroom",
    },
  ],
  "_totalFloors": 4,
  "_unitNumber": "41",
  "_verifications": Verification {
    "_description": "It was popularised in the 1960s with the release of Letraset sheets.",
    "_verificationStatus": 3,
  },
}
`;

exports[`AssetRepository should fetch a lease term 1`] = `
Array [
  Object {
    "annual_increment_percentage": 5,
    "available_from_date": "2020-09-12",
    "currency_code": "+91",
    "furnishing_status": "SEMI",
    "id": 1,
    "maintenance_amount": 1,
    "maintenance_paid_by": "OWNER",
    "maintenance_schedule": "MONTHLY",
    "minimum_lease_period": 2,
    "monthly_rent_price": 1200,
    "security_deposit_price": 15000,
    "utility_paid_by": "OWNER",
  },
]
`;

exports[`AssetRepository should fetch a sale term 1`] = `
Array [
  Object {
    "available_from_date": "2020-09-12",
    "booking_amount": 500,
    "currency_code": "+91",
    "expected_price": 1200,
    "id": 1,
    "maintenance_amount": 200,
    "maintenance_schedule": "MONTHLY",
    "year_of_construction": 1,
  },
]
`;
